# lss_solr_configs

./: .gitignore  Dockerfile  README.md  docker-compose-cloud-mode.yml  docker-compose-default-solr8.yml  docker-compose.yml  docker-composeAaronTest.yml  docker-compose_embedded_zooKeeper.yml  docker-compose_external_zooKeeper.yml  docker-compose_solr6_standalone.yml  docker-compose_solr8_standalone_mode.yml  env.example  indexing_data.sh  init_solr_manager.sh
.github/workflows/: build-manual.yaml  build-manual.yml
conf/: schema.xml  schema_BM25.xml  schema_tfidf.xml  solr.xml  solrconfig.xml  test_1000.txt  test_1000common.txt  test_schema_tfidf.xml  test_solrconfig.xml
lss-dev/: docker-compose.yml
solr/: core-y.properties
solr/conf/: schema.xml
solr6_standalone/conf/: solrconfig.xml
solr8.11.2_cloud/: Dockerfile
solr8.11.2_files/: Dockerfile  security.json
solr8.11.2_files/conf/: schema.xml  solrconfig.xml
solr8.11.2_files/solrCloud_embedded_zooKeeper/: collection_manager.sh
solr8.11.2_files/solrCloud_external_zooKeeper/: collection_manager.sh
solrCloud_embedded_zooKeeper/: Dockerfile  collection_manager.sh
solrCloud_external_zooKeeper/: Dockerfile  collection_manager.sh  env.example
solrCloud_external_zooKeeper/init_files/: solr_init.sh
solr_cloud/: Dockerfile  security.json
solr_manager/: Dockerfile  README.md  docker-compose.yml  env.example  init_solr_manager.sh  pyproject.toml  solr_collection_manager.py  solr_collection_manager_test.py
solr_standalone_mode/: Dockerfile
solrcloud_setup/: Dockerfile  collection_manager.sh
(+96 files in other folders)
